# codeforge-platform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: 01-project-charter.md  02-technical-specs.md  03-architecture.md
src/codeforge/cli/: main.py
src/codeforge/core/: engine.py
tests/: test_basic.py
