[project]
name = "codeforge"
version = "0.1.0"
description = "Professional SDLC Project Generator & Manager with AI Integration"
authors = [{name = "Abdullah Reda", email = ""}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.5.0",
    "toml>=0.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
codeforge = "codeforge.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]